--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title>Menu</title>
     </head>
     <body>
+        <div>Hello World</div>
         <div id='gameRoom'></div>
         <script type="text/javascript" src="bundle.js"></script>
     </body>
