--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menu</title>
+        <title>Fanorona</title>
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <div>Hello World</div>
-        <div id='gameRoom'></div>
+        <div id='App'></div>
         <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
